--- a/admin/index.html
+++ b/admin/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <title>Quan trị</title>
+    <title>Quản trị</title>
 </head>
 <body>
     
@@ -14,7 +14,7 @@
         <h2>Danh sách sản phẩm</h2>
         <div class="row d-flex justify-content-end">
             <div class="col-2 ">
-                <button class="btn btn-success"  id="btn_add_employee"
+                <button class="btn btn-success"  id="btn_add_product"
                     data-bs-toggle="modal" data-bs-target="#modal_add_product">Thêm mới</button>
             </div>
         </div>
@@ -57,41 +57,41 @@
                     <h1 class="modal-title fs-5" id="exampleModalLabel">Thêm mới Sản phẩm</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <form id="form-add-employee"> 
+                <form id="form-add-product"> 
                     <div class="modal-body">
                         <div class="mb-3">
-                            <label for="name" class="form-label">Tên sản phẩm</label>
-                            <input type="text" class="form-control" id="name" />
-                            <p id="error-add-name" class="text-danger"></p>
+                            <label for="add_name" class="form-label">Tên sản phẩm</label>
+                            <input type="text" class="form-control" id="add_name" />
+                            <p id="error-add-title" class="text-danger"></p>
                         </div>
                         <div class="mb-3">
-                            <label for="birthDate" class="form-label">Giá nhập</label>
-                            <input type="date" class="form-control" id="birthDate" />
-                            <p id="error-add-birthDate" class="text-danger"></p>
+                            <label for="add_price" class="form-label">Giá nhập</label>
+                            <input type="text" class="form-control" id="add_price" />
+                            <p id="error-add-price" class="text-danger"></p>
                         </div>
                         <div class="mb-3">
-                            <label for="birthDate" class="form-label">Giá bán</label>
-                            <input type="date" class="form-control" id="birthDate" />
-                            <p id="error-add-birthDate" class="text-danger"></p>
+                            <label for="add_discount" class="form-label">Giá bán</label>
+                            <input type="text" class="form-control" id="add_discount" />
+                            <p id="error-add-discount" class="text-danger"></p>
                         </div>
                         <div class="mb-3">
-                            <label for="birthDate" class="form-label">Số lượng</label>
-                            <input type="date" class="form-control" id="birthDate" />
-                            <p id="error-add-birthDate" class="text-danger"></p>
+                            <label for="add_quantity" class="form-label">Số lượng</label>
+                            <input type="text" class="form-control" id="add_quantity" />
+                            <p id="error-add-quantity" class="text-danger"></p>
                         </div>
                         <div class="mb-3">
-                            <label for="birthDate" class="form-label">Hình ảnh</label>
-                            <input type="date" class="form-control" id="birthDate" />
-                            <p id="error-add-birthDate" class="text-danger"></p>
+                            <label for="add_image" class="form-label">Hình ảnh</label>
+                            <input type="file" class="form-control" id="add_image" />
+                            <p id="error-add-image" class="text-danger"></p>
                         </div>
                         <div class="mb-3">
-                            <label for="salary" class="form-label">Mô tả</label>
-                            <input type="text" class="form-control" id="salary" />
-                            <p id="error-add-salary" class="text-danger"></p>
+                            <label for="add_description" class="form-label">Mô tả</label>
+                            <input type="text" class="form-control" id="add_description" />
+                            <p id="error-add-description" class="text-danger"></p>
                         </div>
                         <div class="mb-3" id="select_option_create">
                         </div>
-                        <p id="error-add-departmentid" class="text-danger"></p>
+                        <p id="error-add-categoryid" class="text-danger"></p>
                     </div>
                     <div class="modal-footer">
                         <button type="reset" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
@@ -202,11 +202,85 @@
             </div>
         </div>
     </div>
+
+      <!-- Modal chỉnh sửa và toast chỉnh sửa -->
+    <div class="modal fade" id="modal_update_product" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Chỉnh sửa sản phẩm</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <!-- <form id="form-update-employee">  -->
+                    <div class="modal-body">
+                        <div class="mb-3">
+                            <label for="update_name" class="form-label">Tên sản phẩm</label>
+                            <input type="text" class="form-control" id="update_name" />
+                            <p id="error-update-title" class="text-danger"></p>
+                        </div>
+                        <div class="mb-3">
+                            <label for="update_price" class="form-label">Giá nhập</label>
+                            <input type="text" class="form-control" id="update_price" />
+                            <p id="error-update-price" class="text-danger"></p>
+                        </div>
+                        <div class="mb-3">
+                            <label for="update_discount" class="form-label">Giá bán</label>
+                            <input type="text" class="form-control" id="update_discount" />
+                            <p id="error-update-discount" class="text-danger"></p>
+                        </div>
+                        <div class="mb-3">
+                            <label for="update_quantity" class="form-label">Số lượng</label>
+                            <input type="text" class="form-control" id="update_quantity" />
+                            <p id="error-update-quantity" class="text-danger"></p>
+                        </div>
+                        <div class="mb-3">
+                            <label for="update_image" class="form-label">Hình ảnh</label>
+                            <input type="file" class="form-control" id="update_image" />
+                            <p id="error-update-image" class="text-danger"></p>
+                        </div>
+                        <div class="mb-3">
+                            <label for="update_description" class="form-label">Mô tả</label>
+                            <input type="text" class="form-control" id="update_description" />
+                            <p id="error-update-description" class="text-danger"></p>
+                        </div>
+                        <div class="mb-3" id="select_option_create">
+                        </div>
+                        <p id="error-update-categoryid" class="text-danger"></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="reset" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
+                        <button type="submit" onclick="updateProduct()" class="btn btn-primary">Lưu</button>
+                    </div>
+                <!-- </form> -->
+            </div>
+        </div>
+    </div>
+    <div aria-live="polite" aria-atomic="true" class="position-relative">
+        <div class="toast-container top-0 end-0 p-3 mt-5">
+            <div class="toast toast_update fade" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="toast-header">
+                    <svg class="bd-placeholder-img rounded me-2" width="20" height="20"
+                        xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice"
+                        focusable="false">
+                        <rect width="100%" height="100%" fill="#007aff"></rect>
+                    </svg>
+
+                    <strong class="me-auto">Thông báo</strong>
+                    <small class="text-muted">Vừa mới</small>
+                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
+                <div class="toast-body">Chỉnh sửa thành công</div>
+            </div>
+        </div>
+    </div>
     
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="product/create.js"></script>
     <script src="product/detail.js"></script>
     <script src="product/delete.js"></script>
     <script src="product/list.js"></script>
+    <script src="uitil/base64.js"></script>
+    <script src="category/categoryList.js"></script>
     <script>
         // Hàm chạy đầu tiên.
          $(document).ready(function () {
