--- a/admin/index.html
+++ b/admin/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css_admin/style.css">
     <title>Quản trị</title>
 </head>
 <body>
@@ -13,6 +15,15 @@
     <div class="container">
         <h2>Danh sách sản phẩm</h2>
         <div class="row d-flex justify-content-end">
+            <div class="col-2">
+                <input id="title_search" type="text" class="form-control" placeholder="Tìm theo tên">
+            </div>
+            <div class="col-2">
+                <div id="select_option_search"></div>
+            </div>
+            <div class="col-1">
+                <button class="btn btn-secondary" onclick="displayProducts()"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </div>
             <div class="col-2 ">
                 <button class="btn btn-success"  id="btn_add_product"
                     data-bs-toggle="modal" data-bs-target="#modal_add_product">Thêm mới</button>
@@ -47,6 +58,8 @@
             </tr>
             </tbody>
         </table>
+        <div id="pagination_admin">
+        </div>
     </div>
 
     <!-- Modal thêm mới và toast thành công -->
@@ -54,47 +67,54 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Thêm mới Sản phẩm</h1>
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Thêm mới Sản phẩm </h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <form id="form-add-product"> 
                     <div class="modal-body">
                         <div class="mb-3">
-                            <label for="add_name" class="form-label">Tên sản phẩm</label>
+                            <label for="add_name" class="form-label">Tên sản phẩm <span class="text-danger text_error">(*)</span></label>
                             <input type="text" class="form-control" id="add_name" />
-                            <p id="error-add-title" class="text-danger"></p>
+                            <p id="error-add-title" class="text-danger text_error"></p>
+                        </div>
+                        <div class="row">
+                            <div class="col-6">
+                                    <label for="add_price" class="form-label">Giá nhập <span class="text-danger text_error">(*)</span></label>
+                                <input type="number" placeholder="VNĐ" class="form-control" id="add_price" />
+                                <p id="error-add-price" class="text-danger text_error"></p>
+                            </div>
+                            <div class="col-6">
+                                <label for="add_discount" class="form-label">Giá bán <span class="text-danger text_error">(*)</span></label>
+                                <input type="number" placeholder="VNĐ" class="form-control" id="add_discount" />
+                                <p id="error-add-discount" class="text-danger text_error "></p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <label for="add_quantity" class="form-label">Số lượng <span class="text-danger text_error">(*)</span></label>
+                                <input type="number" class="form-control" id="add_quantity" />
+                                <p id="error-add-quantity" class="text-danger text_error"></p>
+                            </div>
+
+                            <div class="col-6">
+                                <div  id="select_option_create">
+                                </div>
+                                <p id="error-add-categoryid" class="text-danger text_error"></p>
+                            </div>
                         </div>
                         <div class="mb-3">
-                            <label for="add_price" class="form-label">Giá nhập</label>
-                            <input type="text" class="form-control" id="add_price" />
-                            <p id="error-add-price" class="text-danger"></p>
-                        </div>
-                        <div class="mb-3">
-                            <label for="add_discount" class="form-label">Giá bán</label>
-                            <input type="text" class="form-control" id="add_discount" />
-                            <p id="error-add-discount" class="text-danger"></p>
-                        </div>
-                        <div class="mb-3">
-                            <label for="add_quantity" class="form-label">Số lượng</label>
-                            <input type="text" class="form-control" id="add_quantity" />
-                            <p id="error-add-quantity" class="text-danger"></p>
-                        </div>
-                        <div class="mb-3">
-                            <label for="add_image" class="form-label">Hình ảnh</label>
+                            <label for="add_image" class="form-label">Hình ảnh <span class="text-danger text_error">(*)</span></label>
                             <input type="file" class="form-control" id="add_image" />
-                            <p id="error-add-image" class="text-danger"></p>
+                            <p id="error-add-image" class="text-danger text_error"></p>
                         </div>
                         <div class="mb-3">
-                            <label for="add_description" class="form-label">Mô tả</label>
-                            <input type="text" class="form-control" id="add_description" />
-                            <p id="error-add-description" class="text-danger"></p>
+                            <label for="add_description" class="form-label">Mô tả <span class="text-danger text_error">(ngắn gọn)</span></label>
+                            <textarea class="form-control" id="add_description"  rows="4"></textarea>
+                            <p id="error-add-description" class="text-danger text_error"></p>
                         </div>
-                        <div class="mb-3" id="select_option_create">
-                        </div>
-                        <p id="error-add-categoryid" class="text-danger"></p>
                     </div>
                     <div class="modal-footer">
-                        <button type="reset" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
+                        <button type="reset" id="btn_add_cancel" class="btn btn-secondary btn-danger" data-bs-dismiss="modal">Hủy</button>
                         <button type="submit" class="btn btn-primary">Lưu</button>
                     </div>
                 </form>
@@ -132,7 +152,7 @@
                 Bạn có muốn xóa: <span id="nameProduct" class="text-danger"></span>
             </div>
             <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
+            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Hủy</button>
             <button type="button" class="btn btn-primary" onclick="deleteProduct()">Xóa</button>
             </div>
         </div>
@@ -159,7 +179,7 @@
 
      <!-- Modal chi tiết -->
     <div class="modal fade" id="modal_detail_product" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">Chi tiết sản phẩm</h1>
@@ -168,10 +188,10 @@
                 <!-- <form id="form-update-employee">  -->
                     <div class="modal-body">
                         <div class="row">
-                            <div class="col-5">
+                            <div class="col-6">
                                 <img id="image_detail" src="" width="100%" height="100%">
                             </div>
-                            <div class="col-3">
+                            <div class="col-2">
                                 <p>Mã:</p>
                                 <p>Tên:</p>
                                 <p>Giá nhập:</p>
@@ -187,12 +207,8 @@
                                 <p id="discount_detail"></p>
                                 <p id="quantity_detail"></p>
                                 <p id="category_detail"></p>
-                                <p></p>
-                               
+                                <p id="description_detail"></p>
                             </div>
-                        </div>
-                        <div class="row mt-1">
-                            <p id="description_detail"></p>
                         </div>
                     </div>
                     <div class="modal-footer">
@@ -203,9 +219,9 @@
         </div>
     </div>
 
-      <!-- Modal chỉnh sửa và toast chỉnh sửa -->
+    <!-- Modal chỉnh sửa và toast chỉnh sửa -->
     <div class="modal fade" id="modal_update_product" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog  modal-lg modal-fullscreen-xl-down">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">Chỉnh sửa sản phẩm</h1>
@@ -213,42 +229,55 @@
                 </div>
                 <!-- <form id="form-update-employee">  -->
                     <div class="modal-body">
-                        <div class="mb-3">
-                            <label for="update_name" class="form-label">Tên sản phẩm</label>
-                            <input type="text" class="form-control" id="update_name" />
-                            <p id="error-update-title" class="text-danger"></p>
+                        <div class="row">
+                            <div class="col-6">
+                                <img src="" alt="" id="update_image_raw" width="100%" height="100%">
+                            </div>
+                            <div class="col-6">
+                                <div class="mb-3">
+                                    <label for="update_title" class="form-label">Tên sản phẩm</label>
+                                    <input type="text" class="form-control" id="update_title" />
+                                    <p id="error-update-title" class="text-danger text_error"></p>
+                                </div>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <label for="update_price" class="form-label">Giá nhập</label>
+                                        <input type="number" class="form-control" id="update_price" />
+                                        <p id="error-update-price" class="text-danger text_error"></p>
+                                    </div>
+                                    <div class="col-6">
+                                        <label for="update_discount" class="form-label">Giá bán</label>
+                                        <input type="number" class="form-control" id="update_discount" />
+                                        <p id="error-update-discount" class="text-danger text_error"></p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <label for="update_quantity" class="form-label">Số lượng</label>
+                                        <input type="number" class="form-control" id="update_quantity" />
+                                        <p id="error-update-quantity" class="text-danger text_error"></p>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="" id="select_option_update">
+                                        </div>
+                                        <p id="error-update-categoryid" class="text-danger text_error"></p>
+                                    </div>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="update_image" class="form-label">Hình ảnh thay thế</label>
+                                    <input type="file" class="form-control" id="update_image" />
+                                    <p id="error-update-image" class="text-danger text_error"></p>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="update_description" class="form-label">Mô tả</label>
+                                    <textarea class="form-control" id="update_description"  rows="3"></textarea>
+                                    <p id="error-update-description" class="text-danger text_error"></p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="mb-3">
-                            <label for="update_price" class="form-label">Giá nhập</label>
-                            <input type="text" class="form-control" id="update_price" />
-                            <p id="error-update-price" class="text-danger"></p>
-                        </div>
-                        <div class="mb-3">
-                            <label for="update_discount" class="form-label">Giá bán</label>
-                            <input type="text" class="form-control" id="update_discount" />
-                            <p id="error-update-discount" class="text-danger"></p>
-                        </div>
-                        <div class="mb-3">
-                            <label for="update_quantity" class="form-label">Số lượng</label>
-                            <input type="text" class="form-control" id="update_quantity" />
-                            <p id="error-update-quantity" class="text-danger"></p>
-                        </div>
-                        <div class="mb-3">
-                            <label for="update_image" class="form-label">Hình ảnh</label>
-                            <input type="file" class="form-control" id="update_image" />
-                            <p id="error-update-image" class="text-danger"></p>
-                        </div>
-                        <div class="mb-3">
-                            <label for="update_description" class="form-label">Mô tả</label>
-                            <input type="text" class="form-control" id="update_description" />
-                            <p id="error-update-description" class="text-danger"></p>
-                        </div>
-                        <div class="mb-3" id="select_option_create">
-                        </div>
-                        <p id="error-update-categoryid" class="text-danger"></p>
                     </div>
                     <div class="modal-footer">
-                        <button type="reset" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
+                        <button type="reset" class="btn btn-danger" data-bs-dismiss="modal">Hủy</button>
                         <button type="submit" onclick="updateProduct()" class="btn btn-primary">Lưu</button>
                     </div>
                 <!-- </form> -->
@@ -273,13 +302,17 @@
             </div>
         </div>
     </div>
+
     
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="product/create.js"></script>
+    <script src="product/update.js"></script>
     <script src="product/detail.js"></script>
     <script src="product/delete.js"></script>
     <script src="product/list.js"></script>
+    <script src="product/paging.js"></script>
     <script src="uitil/base64.js"></script>
+    <script src="category/searchCategoryList.js"></script>
     <script src="category/categoryList.js"></script>
     <script>
         // Hàm chạy đầu tiên.
