them thong ke don hang

--- a/admin/index.html
+++ b/admin/index.html
@@ -18,7 +18,7 @@
                     <li class="list-group-item orange-bg"><a class="page-link" href=""><i class="fa-brands fa-product-hunt"></i> Quản lý sản phẩm</a></li>
                     <li class="list-group-item orange-bg"><a class="page-link" href=""><i class="fa-solid fa-bookmark"></i> Thống kê sản phẩm</a></li>
                     <li class="list-group-item orange-bg"><a class="page-link" href=""><i class="fa-solid fa-users"></i> Quản lý khách hàng</a></li>
-                    <li class="list-group-item orange-bg"><a class="page-link" href=""><i class="fa-solid fa-chart-simple"></i> Thống kê đơn hàng</a></li>
+                    <li class="list-group-item orange-bg"><a class="page-link" href="order_data.html"><i class="fa-solid fa-chart-simple"></i> Thống kê đơn hàng</a></li>
                     <li class="list-group-item orange-bg"><a class="page-link" href=""><i class="fa-regular fa-circle-question"></i> Hỏi đáp</a></li>
                 </ul>
             </div>
@@ -74,8 +74,6 @@
                 </div>
             </div>
         </div>
-       
-    
     </div>
     <!-- Bảng sản phẩm -->
   
