--- a/user/html/index.html
+++ b/user/html/index.html
@@ -14,7 +14,11 @@
     <header>
         <div class="container">
             <div class="wrapper-1 d-flex justify-content-between">
-                <ul class="menu d-flex">
+                <ul class="menu d-flex" id="menu">
+                    <div id="bars" onclick="hidden1()">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
+
                     <li>
                         <a href="#">Kênh người bán</a>
                     </li>
@@ -69,7 +73,7 @@
                 </div>
                 <div class="search">
                     <input id="search-name" type="text" placeholder="Tìm sản phẩm">
-                    <button onclick="searchByNameProduct()">
+                    <button onclick="searchByNameProduct()" id="search-btn">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
                 </div>
@@ -99,12 +103,12 @@
                                 <div class="row justify-content-between align-items-center">
                                     <div class="find-price col-6">
                                         <span style="margin-right: 10px; margin-left: 10px;">Sắp xếp theo giá</span>
-                                        <select name="" id="" >
+                                        <select id="find-discount">
                                             <option value="">Tất cả</option>
-                                            <option value="">Duới 2 triệu</option>
-                                            <option value="">Từ 2 triệu đến dưới 5 triệu</option>
-                                            <option value="">Từ 5 triệu đến dưới 10 triệu</option>
-                                            <option value="">Trên 10 triệu</option>
+                                            <option value="lt2">Duới 2 triệu</option>
+                                            <option value="2-5">Từ 2 triệu đến dưới 5 triệu</option>
+                                            <option value="5-10">Từ 5 triệu đến dưới 10 triệu</option>
+                                            <option value="gt10">Trên 10 triệu</option>
                                         </select>
                                     </div>
                                     <!-- Phân trang -->
@@ -188,7 +192,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-2">
+                    <div class="col-2" id="category-footer">
                         <ul>
                             <li>
                                 Danh mục
