--- a/admin/index.html
+++ b/admin/index.html
@@ -16,7 +16,7 @@
                 <ul class="list-group list-group-flush orange-bg">
                     <li class="list-group-item orange-bg p-4 fs-5">BẢNG ĐIỀU KHIỂN</li>
                     <li class="list-group-item orange-bg"><a class="page-link" href=""><i class="fa-brands fa-product-hunt"></i> Quản lý sản phẩm</a></li>
-                    <li class="list-group-item orange-bg"><a class="page-link" href=""><i class="fa-solid fa-bookmark"></i> Thống kê sản phẩm</a></li>
+                    <li class="list-group-item orange-bg"><a class="page-link" href="product_data.html"><i class="fa-solid fa-bookmark"></i> Thống kê sản phẩm</a></li>
                     <li class="list-group-item orange-bg"><a class="page-link" href=""><i class="fa-solid fa-users"></i> Quản lý khách hàng</a></li>
                     <li class="list-group-item orange-bg"><a class="page-link" href="order_data.html"><i class="fa-solid fa-chart-simple"></i> Thống kê đơn hàng</a></li>
                     <li class="list-group-item orange-bg"><a class="page-link" href=""><i class="fa-regular fa-circle-question"></i> Hỏi đáp</a></li>
