--- a/admin/login.html
+++ b/admin/login.html
@@ -5,29 +5,143 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="../user/css/reset.css">
+    <link rel="stylesheet" href="../user/css/style.css">
+    <link rel="icon" href="https://shopeeplus.com//upload/images/4321Shopee-logo-512x512.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+
+    </style>
 </head>
+
 <body>
-    <div class="container">
+    <div class="container-fluid d-flex flex-row" style="background-color: #ee4d2d;">
+        <img src="../user/img/270213300_352607336253543_2173618840149640549_n.png" alt="logo" style="width: 200px;">
+        <div class="fs-1 text-light d-flex align-items-center mx-2" style="font-size: 20px;">|</div>
+        <div class="fs-1 text-light d-flex align-items-center mx-2" style="font-size: 20px;">Đăng nhập</div>
+    </div>
+    <div class="container py-5">
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6">
-                <form id="form-login">
+                <form id="form-login" class="p-5 bg-light border rounded-3">
                     <div class="mb-3">
-                        <label for="username-or-email" class="form-label">Tên đăng nhập (hoặc Email)</label>
-                        <input type="text" class="form-control" id="username-or-email" required />
+                        <label for="username-or-email" class="form-label fw-bold">Tên đăng nhập (hoặc Email)</label>
+                        <input type="text" class="form-control" id="username-or-email" placeholder="Tên đăng nhập"
+                            required />
                     </div>
                     <div class="mb-3">
-                        <label for="password" class="form-label">Mật khẩu</label>
-                        <input type="password" class="form-control" id="password" required />
+                        <label for="password" class="form-label fw-bold">Mật khẩu</label>
+                        <input type="password" class="form-control" placeholder="Mật khẩu" id="password" required />
                     </div>
                     <p class="text-danger" id="error-message"></p>
                     <button type="submit" class="btn btn-primary">Login</button>
                 </form>
             </div>
+            <div class="col-md-3"></div>
         </div>
     </div>
+    <footer class="border border-bottom-0">
+        <div class="container">
+            <div class="wrapper">
+                <div class="row justify-content-between">
+                    <div class="col-2">
+                        <ul>
+                            <li>
+                                Chăm sóc khách hàng
+                            </li>
+                            <li>
+                                <a href="#">Trung tâm trợ giúp</a>
+                            </li>
+                            <li>
+                                <a href="#">Shopee Mall</a>
+                            </li>
+                            <li>
+                                <a href="#">Hướng dẫn mua hàng</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-2">
+                        <ul>
+                            <li>
+                                Giới thiệu
+                            </li>
+                            <li>
+                                <a href="#">Giới thiệu</a>
+                            </li>
+                            <li>
+                                <a href="#">Tuyển dụng</a>
+                            </li>
+                            <li>
+                                <a href="#">Điều khoản</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-2">
+                        <ul>
+                            <li>
+                                Theo dõi
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-facebook" style="color: var(--text-primary1);"></i>
+                                <a href="#">
+                                    Facebook
+                                </a>
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-instagram" style="color: var(--text-primary1);"></i>
+                                <a href="#">
+                                    Instagram
+                                </a>
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-linkedin" style="color: var(--text-primary1);"></i>
+                                <a href="#">
+                                    Linkedin
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-2" id="category-footer">
+
+                    </div>
+                    <div class="col-3">
+                        <ul>
+                            <li>
+                                Vào cửa hàng trên ứng dụng
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-google-play" style="color: var(--text-primary1);"></i>
+                                <a href="#">Google play</a>
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-app-store-ios" style="color: var(--text-primary1);"></i>
+                                <a href="#">App store</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="copyright">
+                    <p style="text-align: center;">
+                        <span style="color: var(--text-primary1);">
+                            © 2015 - Bản quyền thuộc về Công ty TNHH Shopee
+                        </span>
+                    </p>
+                </div>
+            </div>
+        </div>
+        </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="security/login.js"></script>
 </body>
