--- a/detail/detail.html
+++ b/detail/detail.html
@@ -17,7 +17,7 @@
     <header>
         <div class="container">
             <div class="wrapper-1 d-flex justify-content-between">
-                <ul class="menu d-flex" id="menu">
+                <ul class="menu d-flex align-items-center" id="menu">
                     <div id="bars" onclick="hidden1()">
                         <i class="fa-solid fa-bars"></i>
                     </div>
@@ -45,7 +45,7 @@
                     </li>
                 </ul>
 
-                <ul class="nav d-flex">
+                <ul class="nav d-flex align-items-center">
                     <li>
                         <a href="#">
                             <i class="fa-regular fa-bell"></i>
@@ -59,35 +59,45 @@
                         </a>
                     </li>
                     <li>
-                        <a href="register.html">Đăng ký</a>
+                        <!-- <a href="register.html">Đăng ký</a> -->
+                        <label for="" id="userName"></label>
                     </li>
                     <li>|</li>
                     <li>
-                        <a href="login.html">Đăng nhập</a>
+                        <!-- <a href="login.html">Đăng nhập</a> -->
+                        <button id="logout" class="btn btn-success"><i
+                                class="fa-solid fa-right-from-bracket"></i></button>
                     </li>
                 </ul>
+                <!-- <button style="margin: 30px 0 0 0px" type="button" id="change-dark-mode" class="btn btn-secondary" onclick="changeDarkmode()"><i style="margin-right: 10px;" class="fa-solid fa-sun"></i>Dark mode</button> -->
             </div>
 
-            <div class="wrapper-2 d-flex align-items-center">
-                <div class="logo" id="logo">
-                    <a href="#">
-                        <img src="../user/img/270213300_352607336253543_2173618840149640549_n.png" alt="logo shoppe">
-                    </a>
+            <div class="wrapper-2 d-flex align-items-center justify-content-between">
+                <div class="d-flex align-items-center">
+                    <div id="logo" class="logo">
+                        <a href="#">
+                            <img src="../user/img/270213300_352607336253543_2173618840149640549_n.png"
+                                alt="logo shoppe">
+                        </a>
+                    </div>
+                    <div class="fs-1 text-light mx-2">|</div>
+                    <div class="d-flex mx-2">
+                        <div class="fs-1 text-light">Chi tiết sản phẩm</div>
+                    </div>
                 </div>
-                <div class="search">
-                    <input id="search-name" type="text" placeholder="Tìm sản phẩm">
-                    <button onclick="searchByNameProduct()" id="search-btn">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                    </button>
-                </div>
-                <div class="cart" id="cart">
-                    <a href="#">
-                        <i class="fa-solid fa-cart-shopping fa-2x"></i>
-                    </a>
+                <div class="mx-5 d-flex align-items-center">
+                    <div class="fs-2 text-light">Giỏ hàng</div>
+                    <div class="fs-2 mx-2 text-light">|</div>
+                    <div class="cart" id="cart">
+                        <a href="#">
+                            <i class="fa-solid fa-cart-shopping fa-2x"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </header>
+
 
     <div id="content-detail" style="margin-top: 146px;"></div>
     <input type="hidden" id="userId">
@@ -105,12 +115,12 @@
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
             <div class="toast-body">
-                
+
             </div>
         </div>
     </div>
 
-    <footer>
+    <footer class="border border-bottom-0">
         <div class="container">
             <div class="wrapper">
                 <div class="row justify-content-between">
@@ -177,13 +187,13 @@
                                 Danh mục
                             </li>
                             <li>
-                                <a href="#">Mũ bảo hiểm</a>
+                                <a href="#">Giày đá bóng</a>
                             </li>
                             <li>
-                                <a href="#">Phụ kiện</a>
+                                <a href="#">Giày leo núi</a>
                             </li>
                             <li>
-                                <a href="#">Đồ bảo hộ</a>
+                                <a href="#">Giày sneakers</a>
                             </li>
                         </ul>
                     </div>
@@ -222,14 +232,35 @@
     <script>
         let isAddSuccess = true;
         $(document).ready(async function () {
+            let param = window.location.href.split("?");
+            let productId = param[1];
+
+            let username = await getUserName();
+            $('#userName')
+                .text(username)
+                .css({
+                    "font-size": "16px",
+                    "font-weight": "bold",
+                    "color": "black"
+                });
+
+            // let username = await getUserName();
+            display(productId);
+
             $('#cart').on('click', function () {
                 window.location.href = "http://127.0.0.1:5500/cart/cart.html";
             })
 
+            $('#logo').on('click', function () {
+                window.location.href = "http://127.0.0.1:5500/user/html/index.html";
+            });
 
-            let param = window.location.href.split("?");
-            let productId = param[1];
-            display(productId);
+            $('#logout').on('click', function () {
+                window.location.href = "http://127.0.0.1:5500/admin/login.html";
+                localStorage.removeItem('accessToken');
+            });
+
+
 
 
 
