--- a/order_history/history.html
+++ b/order_history/history.html
@@ -17,7 +17,7 @@
     <header>
         <div class="container">
             <div class="wrapper-1 d-flex justify-content-between">
-                <ul class="menu d-flex" id="menu">
+                <ul class="menu d-flex align-items-center" id="menu">
                     <div id="bars" onclick="hidden1()">
                         <i class="fa-solid fa-bars"></i>
                     </div>
@@ -45,7 +45,7 @@
                     </li>
                 </ul>
 
-                <ul class="nav d-flex">
+                <ul class="nav d-flex align-items-center">
                     <li>
                         <a href="#">
                             <i class="fa-regular fa-bell"></i>
@@ -59,38 +59,47 @@
                         </a>
                     </li>
                     <li>
-                        <a href="register.html">Đăng ký</a>
+                        <!-- <a href="register.html">Đăng ký</a> -->
+                        <label for="" id="userName"></label>
                     </li>
                     <li>|</li>
                     <li>
-                        <a href="login.html">Đăng nhập</a>
+                        <!-- <a href="login.html">Đăng nhập</a> -->
+                        <button id="logout" class="btn btn-success"><i
+                                class="fa-solid fa-right-from-bracket"></i></button>
                     </li>
                 </ul>
+                <!-- <button style="margin: 30px 0 0 0px" type="button" id="change-dark-mode" class="btn btn-secondary" onclick="changeDarkmode()"><i style="margin-right: 10px;" class="fa-solid fa-sun"></i>Dark mode</button> -->
             </div>
 
-            <div class="wrapper-2 d-flex align-items-center">
-                <div class="logo" id="logo">
-                    <a href="#">
-                        <img src="../user/img/270213300_352607336253543_2173618840149640549_n.png" alt="logo shoppe">
-                    </a>
+            <div class="wrapper-2 d-flex align-items-center justify-content-between">
+                <div class="d-flex align-items-center">
+                    <div id="logo" class="logo">
+                        <a href="#">
+                            <img src="../user/img/270213300_352607336253543_2173618840149640549_n.png"
+                                alt="logo shoppe">
+                        </a>
+                    </div>
+                    <div class="fs-1 text-light mx-2">|</div>
+                    <div class="d-flex mx-2">
+                        <div class="fs-1 text-light">Lịch sử mua hàng</div>
+                    </div>
                 </div>
-                <div class="search">
-                    <input id="search-name" type="text" placeholder="Tìm sản phẩm">
-                    <button onclick="searchByNameProduct()" id="search-btn">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                    </button>
-                </div>
-                <div class="cart" id="cart">
-                    <a href="#">
-                        <i class="fa-solid fa-cart-shopping fa-2x"></i>
-                    </a>
+                <div class="mx-5 d-flex align-items-center">
+                    <div class="fs-2 text-light">Giỏ hàng</div>
+                    <div class="fs-2 mx-2 text-light">|</div>
+                    <div class="cart" id="cart">
+                        <a href="#">
+                            <i class="fa-solid fa-cart-shopping fa-2x"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </header>
 
     <div class="container" style="margin-top: 146px; margin-bottom: 60px;">
-        <h1 class="text-center">Lịch sử mua hàng</h1>
+        <!-- <h1 class="text-center">Lịch sử mua hàng</h1> -->
         <div class="row mt-5 bg-light">
             <div class="col-md-2 fw-bold d-flex">
                 <p class="mx-2">Ngày đặt hàng</p>
@@ -112,7 +121,7 @@
 
     </div>
 
-    <footer>
+    <footer class="border border-bottom-0">
         <div class="container">
             <div class="wrapper">
                 <div class="row justify-content-between">
@@ -261,12 +270,29 @@
                 window.location.href = "http://127.0.0.1:5500/user/html/index.html";
             });
 
+            $('#cart').on('click', function () {
+                window.location.href = "http://127.0.0.1:5500/cart/cart.html";
+            });
+
+            $('#logout').on('click', function () {
+                window.location.href = "http://127.0.0.1:5500/admin/login.html";
+                localStorage.removeItem('accessToken');
+            });
+
             $('#btn-history').on('click', function () {
                 window.location.href = "http://127.0.0.1:5500/order_history/history.html";
             });
             let userId = await getUserId();
+            let username = await getUserName();
+            $('#userName')
+                .text(username)
+                .css({
+                    "font-size": "16px",
+                    "font-weight": "bold",
+                    "color": "black"
+                });
             display(userId);
-            
+
         })
     </script>
 </body>
